Tue Nov 11 19:03:42 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/Footprint:

          set svn:ignore

        * tests/DCPS/LargeSample/DataReaderListener.cpp:
        * tests/DCPS/LargeSample/Writer.h:
        * tests/DCPS/LargeSample/Writer.cpp:

          Write growing sample sizes during test.

Mon Nov 10 23:15:57 UTC 2014  Paul Calabrese  <calabrese_p@ociweb.com>


        * dds/DCPS/transport/tcp/TcpConnection.h:
        * dds/DCPS/transport/tcp/TcpConnection.cpp:

          Make a couple of changes that prevent the Reconnect test
          from "leaking" threads on the subscriber side.  The main
          change is to explicitly tear down the link after the
          timer goes off indicating the reconnect delay is over.
          In addition, some doubly linked lists between the old
          and new connections were removed.

        * dds/DCPS/transport/framework/TransportQueueElement.cpp:
        * tests/transport/simple/pub_main.cpp:
        * tests/transport/simple/sub_main.cpp:

          Cleanup some of the DBG_ macro usage.

Thu Nov  6 16:30:10 UTC 2014  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/DataWriterImpl.cpp:

          Send the relevant reader RepoId as the message payload
          of the END_HISTORIC_SAMPLES control message.

        * dds/DCPS/transport/framework/DataLinkSet.h:
        * dds/DCPS/transport/framework/DataLinkSet.inl:
        * dds/DCPS/transport/framework/TransportClient.h:
        * dds/DCPS/transport/framework/TransportClient.cpp:

          Support sending a DCPS control message to a specific
          DataLink instead of the entire DataLinkSet.

Thu Oct 30 17:25:46 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/ManualAssertLiveliness/DataReaderListener.cpp:
        * tests/DCPS/ManualAssertLiveliness/Writer.h:
        * tests/DCPS/ManualAssertLiveliness/Writer.cpp: